force-app/main/default/objects/Snapshot_Sales_Funnel__c/Snapshot_Sales_Funnel__c.object-meta.xml
<CustomObject>
    <label>Snapshot Sales Funnel</label>
    <nameField>
        <label>Snapshot Sales Funnel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Sales Funnels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>