force-app/main/default/objects/Snapshot_Sales_Funnel__c/fields/Annual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quantity__c</fullName>
    <label>Annual Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>