force-app/main/default/objects/Snapshot_Sales_Funnel__c/fields/Contribution_unweighted__c.field-meta.xml
<CustomField>
    <fullName>Contribution_unweighted__c</fullName>
    <label>Contribution unweighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>