force-app/main/default/objects/Snapshot_Sales_Funnel__c/fields/Market_Segment_Selection__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment_Selection__c</fullName>
    <label>Market Segment Selection</label>
    <length>30</length>
    <type>Text</type>
</CustomField>