force-app/main/default/objects/Snapshot_Sales_Funnel__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <label>Product Center</label>
    <length>20</length>
    <type>Text</type>
</CustomField>