force-app/main/default/objects/Snapshot_Sales_Funnel__c/fields/Revenue_unweighted__c.field-meta.xml
<CustomField>
    <fullName>Revenue_unweighted__c</fullName>
    <label>Revenue unweighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>