force-app/main/default/objects/Snapshot_Sales_Funnel__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 Competition</fullName>
            </value>
            <value>
                <fullName>1 Lost</fullName>
            </value>
            <value>
                <fullName>2 Inactive</fullName>
            </value>
            <value>
                <fullName>3 Calling on</fullName>
            </value>
            <value>
                <fullName>4 Evaluation</fullName>
            </value>
            <value>
                <fullName>5 Design-in</fullName>
            </value>
            <value>
                <fullName>6 Prototypes</fullName>
            </value>
            <value>
                <fullName>7 Pre-Production</fullName>
            </value>
            <value>
                <fullName>8 Production</fullName>
            </value>
            <value>
                <fullName>9 Closed - EoL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>